Thu Apr 10 13:34:44 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam.rb : Add examination package initializer.

Thu Apr 10 10:57:34 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/type.rb : Fix the type and object model in order to
	  correctly manage unnamed struct or union members.
	* lib/adlint/cc1/syntax.rb : Ditto.
	* lib/adlint/cc1/resolver.rb : Ditto.
	* lib/adlint/cc1/object.rb : Ditto.

	* lib/adlint/exam/c_builtin/cc1_check.rb : Correct W0067 and W0492 code
	  check according to changes of the type and object model.
	* features/code_check/W0801.feature : Ditto.

	* features/code_check/W0067.feature : Add scenario to reproduce
	  false-positive of W0067 code check.
	* MANIFEST : Ditto.

Fri Mar  7 12:57:41 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/lexer.rb : Refactor a bit in order to clarify
	  intention to take tail part of an array.
	* lib/adlint/cc1/value.rb : Ditto.
	* lib/adlint/cpp/eval.rb : Ditto.
	* lib/adlint/cpp/macro.rb : Ditto.
	* lib/adlint/cpp/subst.rb : Ditto.
	* lib/adlint/exam/c_builtin/cc1_check.rb : Ditto.
	* spec/adlint/cc1/syntax_spec.rb : Ditto.

Mon Feb 17 12:56:05 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.2.10
	  - Add new templates for MSVC100 (Visual C++ 2010) as a C compiler on
	    32bit Windows.

Fri Feb 14 13:37:30 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.2.9
	  - Add new templates for MSVC100 (Visual C++ 2010) on 32bit Windows.

Fri Feb 14 11:31:54 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* etc/conf.d/i686-mswin/traits-msvc_100.erb : Add new templates for
	  MSVC100 (Visual C++ 2010) on 32bit Windows.
	* etc/conf.d/i686-mswin/cinit-msvc_100.erb : Ditto.

Fri Feb  7 14:54:17 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.2.8
	  - Fix preprocessor in order not to abend when a function-like macro
	    generates a hexadecimal integer-constant from standalone prefix and